manifests/portfolio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    environment: homelab
    app.kubernetes.io/name: portfolio
