manifests/portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: portfolio
  labels:
    app.kubernetes.io/name: portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: portfolio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portfolio
    spec:
      nodeSelector:
        kubernetes.azure.com/scalesetpriority: "spot"
      tolerations:
        - key: "kubernetes.azure.com/scalesetpriority"
          operator: "Equal"
          value: "spot"
          effect: "NoSchedule"
        - key: "node.kubernetes.io/disk-pressure"
          operator: "Exists"
          effect: "NoSchedule"
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: portfolio
          image: homelabacrepb3n6.azurecr.io/portfolio:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 150m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 3
