manifests/portfolio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio
  namespace: portfolio
  labels:
    app.kubernetes.io/name: portfolio
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: web
  hostnames:
    - "portfolio.iemafzalhassan.tech"
  rules:
    - backendRefs:
        - name: portfolio
          port: 80
